--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script src="https://cdn.bootcss.com/vue/2.5.13/vue.min.js"></script>
 <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
 <script src="https://cdn.yunser.com/libs/yunser-ui-vue/0.1.26/yunser-ui.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script src="/static/12.js"></script>
 <!-- built files will be auto injected -->
 </body>
