--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <script src="https://cdn.yunser.com/libs/yunser-ui-vue/0.1.26/yunser-ui.js"></script>
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script src="/static/12.js"></script>
+<script src="/static/bankcardList.js"></script>
 <!-- built files will be auto injected -->
 </body>
 </html>
