--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"> 
     <title>template-front</title>
 
     <link rel="stylesheet" href="https://cdn.yunser.com/libs/yunser-ui-vue/0.1.26/yunser-ui.css">
